main page and server config

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>946928660428-qcm3s277epprb9t0g3ho0gkq7ssbg01v.apps.googleusercontent.com</string>
+	<string>1047655151970-ufr9gdub42k81iu49jfloi0nkoql6di8.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.946928660428-qcm3s277epprb9t0g3ho0gkq7ssbg01v</string>
+	<string>com.googleusercontent.apps.1047655151970-ufr9gdub42k81iu49jfloi0nkoql6di8</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAVPyjP-jvi9PilyPDDayemo8Ak9OETdQo</string>
+	<string>AIzaSyAI8OlXQDZokh14ra6Sho2ecYT38cfgjUo</string>
 	<key>GCM_SENDER_ID</key>
-	<string>946928660428</string>
+	<string>1047655151970</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.aaaaa</string>
 	<key>PROJECT_ID</key>
-	<string>pleasework-f08bb-57669</string>
+	<string>sear-37cf9</string>
 	<key>STORAGE_BUCKET</key>
-	<string>pleasework-f08bb-57669.firebasestorage.app</string>
+	<string>sear-37cf9.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:946928660428:ios:115233eae12bf618fbf769</string>
+	<string>1:1047655151970:ios:f70cb89190c6cd3798943b</string>
 </dict>
 </plist>
