--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.4.1
   google_sign_in: ^6.2.2
   font_awesome_flutter: ^10.8.0
+  table_calendar: ^3.2.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,7 @@ flutter:
   assets:
     - assets/
     - assets/img/
+    - assets/anim/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
