--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   table_calendar: ^3.2.0
   lottie: ^3.3.1
+  firebase_storage: ^12.4.1
+  cloud_firestore: ^5.6.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
