--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,11 @@ dependencies:
   cloud_firestore: ^5.6.2
   get: ^4.6.6
   image_picker: ^1.1.2
+  file_picker: ^8.3.1
   uuid: ^4.5.1
   geolocator: ^13.0.2
   geocoding: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
