--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,9 @@ dependencies:
   get: ^4.6.6
   image_picker: ^1.1.2
   file_picker: ^8.3.1
-  uuid: ^4.5.1
   geolocator: ^13.0.2
   geocoding: ^3.0.0
+  firebase_database: ^11.3.1
 
 
 dev_dependencies:
@@ -81,6 +81,7 @@ flutter:
     - assets/
     - assets/img/
     - assets/anim/
+    - assets/img/help.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
