--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+<key>NSFaceIDUsageDescription</key>
+<string>We need access to Face ID for authentication</string>
     <key>NSCameraUsageDescription</key>
     <string>We need access to your camera for taking photos</string>
     <key>NSPhotoLibraryUsageDescription</key>
