--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_auth: ^5.4.1
   google_sign_in: ^6.2.2
   font_awesome_flutter: ^10.8.0
-  table_calendar: ^3.2.0
+  table_calendar: ^3.1.3
   lottie: ^3.3.1
   firebase_storage: ^12.4.1
   cloud_firestore: ^5.6.2
@@ -49,6 +49,7 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   firebase_database: ^11.3.1
+  local_auth: ^2.3.0
 
 
 dev_dependencies:
