--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   local_auth: ^2.3.0
   google_maps_flutter: ^2.10.0
   location: ^8.0.0
+  shared_preferences: ^2.5.1
 
 
 dev_dependencies:
