--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_maps_flutter: ^2.10.0
   location: ^8.0.0
   shared_preferences: ^2.5.1
+  google_mlkit_smart_reply: ^0.12.0
 
 
 dev_dependencies:
