--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   google_maps_flutter: ^2.10.0
   location: ^8.0.0
   shared_preferences: ^2.5.1
-  google_mlkit_text_recognition: ^0.14.0
+  google_mlkit_object_detection: ^0.14.0
 
 dev_dependencies:
   flutter_test:
@@ -85,7 +85,7 @@ flutter:
     - assets/
     - assets/img/
     - assets/anim/
-    - assets/img/help.jpg
+    - assets/ml
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
