--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,9 @@ dependencies:
   google_maps_flutter: ^2.10.0
   location: ^8.0.0
   shared_preferences: ^2.5.1
-  google_mlkit_object_detection: ^0.14.0
+  google_mlkit_image_labeling: ^0.13.0
+  path: ^1.9.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -85,7 +87,7 @@ flutter:
     - assets/
     - assets/img/
     - assets/anim/
-    - assets/ml
+    - assets/ml/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
